force-app/main/default/objects/QuoteLineItem/fields/DC_Allocation_Required__c.field-meta.xml
<CustomField>
    <fullName>DC_Allocation_Required__c</fullName>
    <formula>Product2.DC_Allocation_Required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocation Required</label>
    <type>Text</type>
</CustomField>