force-app/main/default/objects/QuoteLineItem/fields/DC_Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>DC_Asset_Type__c</fullName>
    <formula>Product2.DC_Asset_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Type</label>
    <type>Text</type>
</CustomField>