force-app/main/default/objects/QuoteLineItem/fields/DC_Income_Category__c.field-meta.xml
<CustomField>
    <fullName>DC_Income_Category__c</fullName>
    <formula>Product2.DC_Income_Category__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Income Category</label>
    <type>Text</type>
</CustomField>