force-app/main/default/objects/QuoteLineItem/fields/DC_Number_of_Assets__c.field-meta.xml
<CustomField>
    <fullName>DC_Number_of_Assets__c</fullName>
    <formula>Product2.DC_Number_of_Assets__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Assets</label>
    <type>Text</type>
</CustomField>